# numbergame

./: .pre-commit-config.yaml  .pylintrc  app.py  noxfile.py  pyproject.toml  requirements.txt
numbergame/: __init__.py  settings.py
numbergame/api/v1/: game_levels.py  hello.py  level_solution.py  user_level.py  user_profile.py  version.py
numbergame/db/: alchemy_encoder.py  session_manager.py
numbergame/generator/: level_generator.py
numbergame/models/: level.py  users.py
numbergame/utils/: tools.py
tests/: test_numbergame.py
